src/lua.h

/* thread status */
#define LUA_OK		0
typedef struct lua_State lua_State;
typedef int (*lua_Writer) (lua_State *L, const void *p, size_t sz, void *ud);
LUA_API void       (lua_close) (lua_State *L);
LUA_API lua_Number (lua_version) (lua_State *L);
LUA_API lua_Number      (lua_tonumberx) (lua_State *L, int idx, int *isnum);
LUA_API lua_Integer     (lua_tointegerx) (lua_State *L, int idx, int *isnum);
LUA_API const char     *(lua_tolstring) (lua_State *L, int idx, size_t *len);
LUA_API int (lua_dump) (lua_State *L, lua_Writer writer, void *data, int strip);